28 Sep 2006; Alastair Tse <alastair@liquidx.net> pybugz 0.6.12

	* Changed ExpatError to dump the line of the error.
	
19 Sep 2006; Alastair Tse <alastair@liquidx.net> pybugz 0.6.12

	* Added search by product via --product, thanks to Donnie
	Berkholz. 
	* Fixed comments to be numbered the same way as in bugzilla.

02 Sep 2006; Alastair Tse <alastair@liquidx.net> pybugz 0.6.11

	* Fixed bugz post missing description.

02 Sep 2006; Alastair Tse <alastair@liquidx.net> pybugz 0.6.10

	* Added support for dependson and blocked bugs in modify and get.
	* Fixed stripping depends/blocked bugs in modify.
	
23 Aug 2006; Alastair Tse <alastair@liquidx.net> pybugz 0.6.9
       
	* Fixed traceback when encoding is not detected.

20 Aug 2006; Alastair Tse <alastair@liquidx.net> pybugz 0.6.8

	* Fixed failure to submit URL in bugz post.
	* Added external editor support for comments in attach, post and
	modify.
	* Added option to include comments from a file.
	* Added option to always authenticated (-A) (for private
	bugzillas)
	* Changed formatting of result when submitting modification.
	* Abstracted input and output to enable different UI
	implementations.
	* Added --quiet option to only return data and no status
	messages.

18 Aug 2006; Alastair Tse <alastair@liquidx.net> pybugz 0.6.7

	* Fixed attachment download (because of my option parsing
	cleanup.)
	
16 Aug 2006; Alastair Tse <alastair@liquidx.net> pybugz 0.6.6

	* Fixed attachment view failure when filename exists.
	* Fixed multiple bugs with 'bugz post' including error when title
	is not specified on the command line and emerge info being
	attached no matter what. Thanks to Aggelos Orfanakos for reporting
	the issue.
	* Fixed ugly backtrace when pressing Ctrl+C

14 Aug 2006; Alastair Tse <alastair@liquidx.net> pybugz 0.6.5
	
	* Fixed URL construction when passed a base without trailing
	slash.
	* Renamed --reported-by to --reporter as it is more intuitive