@@ -1,3 +1,6 @@
+28 Dec 2007; William Hubbs <w.d.hubbs@gmail.com>
+	* Added support for the --keywords option, thanks to Mike Vapier
+
 28 Sep 2006; Alastair Tse <alastair@liquidx.net> pybugz 0.6.12
 
 	* Changed ExpatError to dump the line of the error.
